--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "~10.1.0",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
+    "mat-table-filter": "^9.0.1",
     "rxjs": "~6.6.0",
+    "save": "^2.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
